# coding-fun

./: .gitignore  README.md  class.txt
arduino/: ArduinoMain_shortcut.lnk
c++/: a.out  forLoop.cpp  forLoop.out  inputQuest.cpp  inputQuest.out  inputQuest_again.out  inputTest.out  maxValue.cpp  maxValue.out  multiFunction.cpp  multiFunction.out  soloLearn.cpp  soloLearn.out  swithCases.cpp  swithCases.out  whileLoop.cpp  whileLoop.out
c++/SoccerGame/: SoccerGame.sln
c++/tensorFlow/: a.out
c++/test_extern/: date_support.c  externTest.out  main.c
c++/tetris/: tetris.cpp
csharp/C#_and_dotNET/: ageTest.cs  hello.aspx  moartests.cs  sourcefile.cs  test_script.cs
csharp/hellowholred/: hello.cs
data/: bak.txt  expenses.csv
haskell/: hellowWhorled.hs
haskell/gui_tutorial/: PodMainGUI.hs
io/io-snippets-master/: SplatBlock.io
java/ChrisBlack/: QuickTest.Out  QuickTest.java
java/JavaFX_tests/: .project  Main.java
java/evil/: EvilUnicode.java
java/myTests/: Animal.java  BirthdayGreeting.java  BlockTest.java  Dog.java  Doggy.java
javascript/: calculatorIFoundOnTheInterweb.js  jsTest.js
julia/: Plotly_API_Key.txt  hello.jl
julia/compiling/: hellowhorled.jl
julia/dracalatron/: dracalanator.jl  fourrandom.jl
matlab/: pathdef.m
originals/: README.md
originals/c++/apps/funstuff/classpractice/TestCMake/: CMakeLists.txt  TestCMakeConfig.h
r/pca/: Pcajb.R  (+2 more)
ruby/: blank.rb  grep_ruby.rb
shell/: arrays  case  files  functions  input_output  inputformat  loops  parameter_expansion  parsefiles  positions  regex  strings  test
sql/: employees.sql
(+511 files in other folders)
